<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.UserDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/backIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/backIv"
            style="@style/TextAppearance.AppCompat.Title"
            android:text="@string/enter_the_user_details"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/titleText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/nameTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactNumTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/emailTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contactNumTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_number"
                android:maxLines="1"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dobTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/contactNumTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dobTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_dob"
                android:maxLines="1"
                android:textColor="@color/black"
                android:inputType="date"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/dobTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_address"
                android:minLines="3"
                android:maxLines="5"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/addressTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_city"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stateTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="dropdown_menu"
            app:layout_constraintTop_toBottomOf="@id/cityTIL">

            <AutoCompleteTextView
                android:id="@+id/stateTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choose_your_state"
                android:textColor="@color/black"
                android:maxLines="1"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countryTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="dropdown_menu"
            app:layout_constraintTop_toBottomOf="@id/stateTIL">

            <AutoCompleteTextView
                android:id="@+id/countryTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choose_your_country"
                android:textColor="@color/black"
                android:maxLines="1"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pincodeTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/countryTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pincodeTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_pincode"
                android:maxLines="1"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pincodeTIL"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>