<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.UserKYCDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/backIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/backIv"
            style="@style/TextAppearance.AppCompat.Title"
            android:text="@string/enter_the_user_kyc_details"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gstinTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/titleText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gstinTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_gstin_no"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/panNoTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/gstinTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/panNoTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_pan_no"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/aadharNumTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/panNoTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aadharNumTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_aadhar_number"
                android:maxLines="1"
                android:digits="0123456789"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dLTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/aadharNumTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dLTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_dl_no"
                android:maxLines="1"
                android:textColor="@color/black"
                android:inputType="text"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/voterIDTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/dLTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/voterIDTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_voter_id"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/upiIDTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@id/voterIDTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/upiIDTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_upi_id"
                android:textColor="@color/black"
                android:maxLines="1"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/upiIDTIL"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>